--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "homepage": "./",
   "dependencies": {
     "@babel/register": "^7.4.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-regular-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@hapi/hapi": "^18.3.1",
     "@hapi/inert": "^5.2.0",
     "babel-plugin-dynamic-import-node": "^2.3.0",
